[tool.poetry]
name = "ppc"
version = "0.1.0"
description = "A command line tool for creating Python projects and pushing them to GitHub"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
requests = "^2.25"
appdirs = "^1.4"
toml = "^0.10"
cookiecutter = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ppc = "ppc:create_project"
